# modest-human-brands

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .prettierignore  Architecture.mmd  CHANGELOG.md  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  nuxt.config.ts  package.json  tailwind.config.ts
.github/workflows/: deploy.yml  integrate.yml
app/: app.vue
app/components/: AnimatedCounter.vue  AppActionbar.vue  AppActivitybar.vue  AppBreadcrumb.vue  AppEditor.vue  AppEditorCommandsList.vue  AppFloatingActionToolbar.vue  AppNavbar.vue  AppSidebar.vue  AppSidebarPreviewList.vue  BaseButton.vue  BaseCard.vue  BaseDrawerSidebar.vue  BaseHeader.vue  BaseInput.vue  BaseStepper.vue  CardComplianceRow.vue  CardConnect.vue  CardDocCollection.vue  CardDocFolder.vue  CardMedia.vue  CardMediaCollection.vue  CardMediaPublic.vue  CardOrganization.vue  CardProject.vue  CardStream.vue  CardStreamCollection.vue  ChatArea.vue  ChatMessageBubble.vue  ChatMessageInput.vue  ChatVoiceInput.vue  ConnectActionDrawer.vue  ConnectChatArea.vue  ConnectColumn.vue  ConnectContactCard.vue  ConnectFormField.vue  ConnectSidebar.vue  CoordinateChatArea.vue  CoordinateContactCard.vue  CoordinateSidebar.vue  (+14 more)
app/composables/: useCacheAsset.ts  useChat.ts  useCoordinate.ts  useLayoutActions.ts  useLiveKit.ts  useMatrix.ts  useMedia.ts  useMediaRecorder.ts  usePdfViewer.ts  useWhip.ts
app/layouts/: default.vue  drive.vue  navigation-header.vue  (+1 more)
config/: Caddyfile  ome.xml  omeRecord.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+180 files in other folders)
