[package]
name = "modest-human-brands"
description = "Autonomous Next-Gen Media Operating System"
authors = ["Shirsendu Bairagi <shirsendu2001@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/Modest-Human-Brands/modest-human-brands.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
